--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,6 @@
 	<property name="conf" location="conf" />
 	<property name="doc" location="javadoc" />
 	<property name="tmp" location="temp" />
-	<property name="dist" location="dist" />
 	<property name="tmp.classes" location="${tmp}/classes" />
 	
 	<path id="classpath">
@@ -37,8 +36,7 @@
 		<manifestclasspath property="jar.classpath" jarfile="wxg.jar">
 			<classpath refid="classpath"/>
 		</manifestclasspath> 
-		<mkdir dir="${dist}" />
-		<jar jarfile="${dist}/wxg.jar">
+		<jar jarfile="wxg.jar">
 			<manifest>
 				<attribute name="Main-Class" value="de.rwth_aachen.dbis.wsxmppgateway.WebSocketXmppGateway" />
 				<attribute name="Class-Path" value="${jar.classpath}" />
@@ -69,6 +67,6 @@
 	<target name="clean" description="clean up" >
 	    <!-- Delete the ${tmp} and ${dist} directory trees -->
 	    <delete includeemptydirs="true" dir="${tmp}"/>
-	    <delete includeemptydirs="true" dir="${dist}"/>
+	    <delete includeemptydirs="true" file="wxg.jar"/>
     </target>
 </project>
